syntax = "proto3";

package user_v1;

option go_package = "user_service/pkg/user_v1;user_v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service UserV1 {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty) {}
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {}
}

message User {
  string id = 1;
  string email = 2;
  string grade = 3;
  google.protobuf.Timestamp created_at = 4;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string grade = 3;
}

message RegisterResponse {
  string id = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  string grade = 2;
  string password = 3;
}

message DeleteUserRequest {
  string id = 1;
}
