syntax = "proto3";

option go_package = "chat_v1;chat_v1";

package chat_v1;

service ChatService {
    rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
    rpc AddUserToChat(AddUserToChatRequest) returns (AddUserToChatResponse);
    rpc GetUserChats(GetUserChatsRequest) returns (GetUserChatsResponse);
    rpc GetChatUsers(GetChatUsersRequest) returns (GetChatUsersResponse);
    rpc RemoveUserFromChat(RemoveUserFromChatRequest) returns (RemoveUserFromChatResponse);
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
    rpc GetChat(GetChatRequest) returns (GetChatResponse);
}

message Message {
    string message_id = 1;
    string project_id = 2;
    string user_id = 3;
    string content = 4;
    string timestamp = 5;
}

message Chat {
    string chat_id = 1;
    string project_id = 2;
    string name = 3;
    string created_at = 4;
    repeated string members = 5;
}

message GetChatRequest {
    string project_id = 1;
}

message GetChatResponse {
    Chat chat = 1;
}

message GetMessagesRequest {
    string project_id = 1;
    int32 limit = 2;
    int32 cursor = 3;
    string user_id = 4;
}

message GetMessagesResponse {
    repeated Message messages = 1;
}

message CreateChatRequest {
    string project_id = 1;
    string name = 2;
    repeated string member = 3;
}

message CreateChatResponse {
    string chat_id = 1;
}

message AddUserToChatRequest {
    string project_id = 1;
    string user_id = 2;
}

message AddUserToChatResponse {
    string project_id = 1;
}

message GetUserChatsRequest {
    string user_id = 1;
}

message GetUserChatsResponse {
    repeated string project_ids = 1;
}

message GetChatUsersRequest {
    string project_id = 1;
}

message GetChatUsersResponse {
    repeated string user_ids = 1;
}

message RemoveUserFromChatRequest {
    string project_id = 1;
    string user_id = 2;
}

message RemoveUserFromChatResponse {
    string project_id = 1;
}